[Fernando Araujo][11-27-2019] dropdown

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>Teslac</title>
   <base href="/">
+  <meta name="Description" content="Teslac Web">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="Teslac.ico">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
