--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Teslac</title>
-  <base href="/">
+  <base href="/teslac">
   <meta name="Description" content="Teslac Web">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="Teslac.ico">
